src-built-in/components/assets/css/_toolbar.css
/* New Toolbar Starts Here*/
.finsemble-toolbar {
    display: flex;
    align-items: stretch;
    width: 100%;
    background: var(--toolbar-background-color);
    color: var(--toolbar-primary-font-color);
    align-content: center;
    height: var(--toolbar-height);
}

.fullHeightFlex {
    height: 100%;
    display: flex;
}

.finsemble-toolbar.horizontal {
    flex-direction: row;
}

.finsemble-toolbar.vertical {
    flex-direction: column;
}

.finsemble-toolbar-section {
    display: flex;
    flex-direction: row;
    align-content: center;
    align-items: stretch;
    overflow: hidden;
}

.finsemble-toolbar-section.right {
    justify-content: flex-end;
    order: 2;
    flex: 1;
    flex: 0 0 auto;
}

.finsemble-toolbar-section.left {
    order: 0;
    justify-content: flex-start;
    flex: 0 0 auto;
}

.finsemble-toolbar-section.center {
    justify-content: flex-start;
    order: 1;
    flex: 1 1 auto;
}

.finsemble-toolbar-section.center.overflow {
    justify-content: space-between;
}

.finsemble-toolbar-button {
    display: table;
    padding: var(--toolbar-button-padding);
    height: 100%;
    border: 1px solid var(--toolbar-background-color);
}

.finsemble-toolbar-button-label {
    font-size: .95em;
    font-weight: var(--toolbar-button-label-font-weight);
    text-align: left;
    letter-spacing: .25px;
    align-content: center;
    display: block;
    margin-top: var(--toolbar-button-label-margin);    
}

.finsemble-toolbar-button:hover {
    background: var(--secondary-accent-color);
    color: var(--secondary-hover-font-color);
    border: 1px solid transparent;
    cursor: pointer;
}

@media screen and (max-device-width: 1400px) {
    .finsemble-toolbar-workspace-button-label > .finsemble-toolbar-button-label {
        width: 85px;
    }
}

@media screen and (min-device-width: 1400px) {
    .finsemble-toolbar-workspace-button-label > .finsemble-toolbar-button-label {
        width: 150px;
    }
}

.finsemble-toolbar-workspace-button-label > .finsemble-toolbar-button-label {
    overflow: hidden;
    text-align: center;
    text-overflow: ellipsis;
    white-space: nowrap;
    border-right: var(--toolbar-separator);
}

.finsemble-toolbar-workspace-button-label.finsemble-toolbar-button:hover {
    background: var(--secondary-accent-color);
    border: 1px solid transparent;
    cursor: pointer;
}

.finsemble-toolbar-button-icon {
    height: 100%;
    padding-top: 2px;
    display: table-cell;
    vertical-align: middle;
}

.finsemble-toolbar-button-icon.left {
    padding-right: 5px;
}

.finsemble-toolbar-button-icon.right {
    padding-left: 5px;
}

.divider {
    display: flex;
    align-self: center;
}

.divider:before {
    height: 20px;
    border-right: var(--toolbar-separator);
    content: '';
    margin: 0 .25em 0 .25em;
}

img.pinned-icon {
    padding-top: var(--pinned-icon-padding-top);
    max-width: 17px;
}

.pinned-icon {
    color: var(--pinned-icon-font-color);
    font-size: var(--pinned-icon-font-size);
    padding-right: .25em;
}

.pinned-workspace-icon {
    color: var(--workspace-icon-color ) !important;
}

.toolbar-button-label-left {
    order: -1;
}

.toolbar-button-label-right {
    order: 1;
}

.finsemble-button-label {
    padding-top: var(--finsemble-button-label-padding-top);
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.finsemble-toolbar-brand-logo {
    width: var(--brand-logo-width);
    height: var(--brand-logo-height);
    margin: var(--brand-logo-margin);
    padding: 2px 0px 0px 0px !important;
}

/* Special tweaks for pinned icons */
.ff-document-2 {
    padding-bottom: 2px;
}

.ff-chart-pie {
    font-size: 24px;
}

.ff-insiders-2 {
    padding-top: 3px;
}

.ff-company {
    padding-bottom: 2px;
}

.ff-minimize-all {
    padding-top: 4px;
}

